# 3D_engine_learning

./: Apptest.1.trace  Apptest.trace  CMakeLists.txt  Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  EventsHandler.cpp  EventsHandler.hpp  MyScene.cpp  MyScene.hpp  README.md  Shader.hpp  Texture.hpp  main.cpp  main.cpp.chap1  test
app/: CMakeLists.txt
app/include/: MyScene.hpp  MyScene2.hpp
app/src/: MyScene.cpp  MyScene2.cpp  main.cpp.old  main0.cpp
core/: CMakeLists.txt
core/include/: Color.hpp  EntityManager.hpp  Interface.hpp  Logger.hpp  Meta.hpp
core/src/: Logger.cpp
data/shaders/fragment/: 1.shader  bug.shader  light.shader  source_light.shader
data/shaders/vertex/: 2.shader
gl/: CMakeLists.txt
gl/include/: Camera.hpp  Color.hpp  Debug.hpp  DirectionalLight.hpp  DrawableObject.hpp  EventsHandler.hpp  Global.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  PointLight.hpp  Scene.hpp  Shader.hpp  SimpleMaterial.hpp  SpotLight.hpp  Texture.hpp  TexturedMaterial.hpp  Vertex.hpp  gl_core_3_3.hpp
gl/src/: Camera.cpp  Debug.cpp  DirectionalLight.cpp  EventsHandler.cpp  Global.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  PointLight.cpp  Scene.cpp  Shader.cpp  SimpleMaterial.cpp  SpotLight.cpp  Texture.cpp  TexturedMaterial.cpp
include/: Camera.hpp  Color.hpp  Debug.hpp  EventsHandler.hpp  Material.hpp  Mesh.hpp  Shader.hpp  Texture.hpp  Vertex.hpp
src/: Camera.cpp  Color.cpp  EventsHandler.cpp  Material.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  gl_core_3_3.cpp  main0.cpp  main0.cpp.autosave
src/include/: Scene.hpp
src/src/: Scene.cpp
